--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -13,6 +13,8 @@ header{
     display: flex;
     position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     align-items: center;
     padding: 10px 0;
     z-index: 1000;
